--- a/Practicum OO - AOP.ipynb
+++ b/Practicum OO - AOP.ipynb
@@ -12,10 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from unittest import *    \n",
@@ -58,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,16 +99,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "......\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 6 tests in 0.016s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=6 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class MyDeQue(MyQueue):\n",
-    "    def __init__(self):\n",
-    "        # TODO\n",
-    "        pass"
+    "    def __init__(self, a=[]):\n",
+    "        MyQueue.__init__(self, a)\n",
+    "\n",
+    "    def appendright(self, x):\n",
+    "        self.enqueue(x)\n",
+    "\n",
+    "    def appendleft(self, x):\n",
+    "        self.insert(0, x)\n",
+    "\n",
+    "    def popright(self):\n",
+    "        if len(self):\n",
+    "            return self.pop(len(self) - 1)\n",
+    "\n",
+    "    def popleft(self):\n",
+    "        return self.dequeue()\n",
+    "\n",
+    "    def reverse(self):\n",
+    "        super().reverse()\n",
+    "\n",
+    "    def rotateright(self, n):\n",
+    "        for _ in range(n):\n",
+    "            self.appendleft(self.popright())\n",
+    "\n",
+    "    def rotateleft(self, n):\n",
+    "        for _ in range(n):\n",
+    "            self.appendright(self.popleft())\n",
+    "            \n",
+    "class MyDeQueTest(TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.testList = [1,4,0,7,9,2]\n",
+    "        self.deque = MyDeQue(self.testList)\n",
+    "\n",
+    "    def testPopLeft(self):\n",
+    "        self.assertEqual(1, self.deque.popleft())\n",
+    "\n",
+    "    def testPopRight(self):\n",
+    "        self.assertEqual(2, self.deque.popright())\n",
+    "\n",
+    "    def testAppendRight(self):\n",
+    "        self.deque.appendright(0)\n",
+    "        self.assertEqual([1, 4, 0, 7, 9, 2, 0], self.deque)\n",
+    "\n",
+    "    def testAppendLeft(self):\n",
+    "        self.deque.appendleft(0)\n",
+    "        self.assertEqual([0, 1, 4, 0, 7, 9, 2], self.deque)\n",
+    "\n",
+    "    def testRotateRight(self):\n",
+    "        self.deque.rotateright(2)\n",
+    "        self.assertEqual([9, 2, 1, 4, 0, 7], self.deque)\n",
+    "\n",
+    "    def testRotateLeft(self):\n",
+    "        self.deque.rotateleft(2)\n",
+    "        self.assertEqual([0, 7, 9, 2, 1, 4], self.deque)\n",
+    "\n",
+    "TextTestRunner().run(TestLoader().loadTestsFromModule(MyDeQueTest()))\n"
    ]
   },
   {
@@ -151,22 +221,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cv: 76\n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
+    "\n",
     "class SimpleSecureEvaluator(object):\n",
-    "    self.d = {} # empty dictionary\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        # TODO\n",
-    "        pass\n",
-    "    \n",
-    "    def eval(self, expressie):\n",
-    "        # TODO\n",
-    "        pass"
+    "    def __init__(self, d={}):\n",
+    "        self.d = d\n",
+    "\n",
+    "    def eval(self, expression):\n",
+    "        if expression.strip() == \"mydir\":\n",
+    "            [print(\"{}: {}\".format(k, v)) for (k, v) in self.d.items()]\n",
+    "            return\n",
+    "\n",
+    "        if expression.find('=') > -1:\n",
+    "            var, innerExpr = expression.split('=', 1)\n",
+    "            var = var.strip()\n",
+    "\n",
+    "            if not var.isalpha():\n",
+    "                raise ValueError(\n",
+    "                    \"A variable name should only exists out of alpha characters: {}\".format(var))\n",
+    "            self.d[var] = self.eval(innerExpr)\n",
+    "            return\n",
+    "\n",
+    "        expressionList = re.sub(\n",
+    "            '(\\(|\\)|[+\\\\-*\\^\\/=])', ' \\\\1 ', expression).split()\n",
+    "\n",
+    "        for item in expressionList:\n",
+    "            if item.isalpha():\n",
+    "                if item in self.d.keys():\n",
+    "                    expression = expression.replace(item, str(self.d[item]))\n",
+    "                else:\n",
+    "                    raise ValueError(\n",
+    "                        \"Invalid expression! {} not defined!\".format(item))\n",
+    "\n",
+    "        return eval(expression)\n",
+    "\n",
+    "\n",
+    "evaluator = SimpleSecureEvaluator()\n",
+    "\n",
+    "\n",
+    "evaluator.eval(\"cv = 1 + 1\")\n",
+    "evaluator.eval(\"cv = cv + 29 + 45\")\n",
+    "evaluator.eval(\"mydir\")"
    ]
   },
   {
@@ -235,19 +342,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Do something useful here!\n",
+      "Module:  __main__ | function:  successor\n",
       "4\n",
       "--------------------\n",
       "2.0\n",
       "--------------------\n",
-      "Do something useful here!\n",
+      "Module:  math | function:  sqrt\n",
       "2.0\n"
      ]
     }
@@ -260,7 +367,7 @@
     "    @wraps(f) #Gebruik van wraps niet noodzakelijk (zie reader), maar wel netter\n",
     "    def inner(*args, **kwargs): \n",
     "        # gebruik van list arguments en dict keyword arguments omdat we niet weten wat voor functie we gaan krijgen.\n",
-    "        print(\"Do something useful here!\")\n",
+    "        print(\"Module: \", f.__module__, \"| function: \", f.__name__)\n",
     "        result = f(*args, **kwargs)\n",
     "        # mogelijk nog meer nuttige aanroepen hier...\n",
     "        return result\n",
@@ -331,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
